# flake8-forbid-visual-indent

./: .gitignore  LICENSE  README.md  flake8_forbid_visual_indent.py  setup.cfg  setup.py
tests/: test_checker.py
