[metadata]
name = flake8-forbid-visual-indent
description = Flake8 plugin that disallows visual indentation
long_description = file: README.md
maintainer = Andrii Teraz
maintainer_email = andrey.teraz@gmail.com
url = https://github.com/ateraz/flake8-forbid-visual-indent
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = True
packages = find:
python_requires = >=3.7.0
py_modules = flake8_forbid_visual_indent
install_requires =
    flake8>=3.7.0
setup_requires =
    pytest-runner
tests_require =
    flake8-import-order
    flake8-quotes
    pytest-cov
    pytest-flake8
    pytest-mypy

[options.packages.find]
exclude =
    tests

[options.entry_points]
flake8.extension =
    VI101 = flake8_forbid_visual_indent:ForbidVisualIndent

[aliases]
test = pytest

[tool:pytest]
addopts = -q --cache-clear --cov=flake8_forbid_visual_indent --cov-fail-under=100 --flake8 --mypy
console_output_style = classic
markers = mypy

[coverage:report]
exclude_lines = if TYPE_CHECKING:
show_missing = true
skip_covered = true

[flake8]
application-import-names = flake8_forbid_visual_indent
import-order-style = pep8
inline-quotes = double
max-line-length = 119

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
